Lesson 5: add auth (web & api)
