# api-docs.json
@@ -12,6 +12,9 @@
     "paths": {
         "\/api\/news": {
             "get": {
+                "tags": [
+                    "news"
+                ],
                 "summary": "Display a listing of the resource.",
                 "responses": {
                     "200": {
@@ -43,6 +46,9 @@
         },
         "\/api\/news\/{news}": {
             "get": {
+                "tags": [
+                    "news"
+                ],
                 "summary": "Display the specified resource.",
                 "parameters": [
                     {
@@ -78,6 +84,9 @@
         },
         "\/api\/pages": {
             "get": {
+                "tags": [
+                    "page"
+                ],
                 "summary": "Display a listing of the resource.",
                 "responses": {
                     "200": {
@@ -109,6 +118,9 @@
         },
         "\/api\/pages\/{page}": {
             "get": {
+                "tags": [
+                    "page"
+                ],
                 "summary": "Display the specified resource.",
                 "parameters": [
                     {
@@ -144,6 +156,9 @@
         },
         "\/api\/appeal": {
             "post": {
+                "tags": [
+                    "appeal"
+                ],
                 "summary": "Send params to make appeal form.",
                 "parameters": [
                     {
@@ -204,6 +219,228 @@
                             "application\/json": {
                                 "schema": {
                                     "$ref": "#\/components\/schemas\/WrongAppeal"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "\/api\/login": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login.",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "token": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Failed response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "errors": {
+                                            "type": "object",
+                                            "properties": {
+                                                "": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "default": "The provided credentials are incorrect.",
+                                                        "type": "string"
+                                                    },
+                                                    "nullable": true
+                                                },
+                                                "name": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    },
+                                                    "nullable": true
+                                                },
+                                                "email": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    },
+                                                    "nullable": true
+                                                },
+                                                "password": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    },
+                                                    "nullable": true
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "\/api\/logout": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Logout.",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "array"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Failed response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "default": "Unauthenticated.",
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "\/api\/register": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Register.",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "token": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Failed response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "errors": {
+                                            "type": "object",
+                                            "properties": {
+                                                "": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "default": "The provided credentials are incorrect.",
+                                                        "type": "string"
+                                                    },
+                                                    "nullable": true
+                                                },
+                                                "name": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    },
+                                                    "nullable": true
+                                                },
+                                                "email": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    },
+                                                    "nullable": true
+                                                },
+                                                "password": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    },
+                                                    "nullable": true
+                                                }
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
@@ -365,6 +602,10 @@
         {
             "name": "appeal",
             "description": "Appeal"
+        },
+        {
+            "name": "auth",
+            "description": "Auth"
         }
     ]
 }
